--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,11 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.65",
+        "laravel/passport": "^10.2",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "ramsey/uuid": "^4.2",
+        "shetabit/visitor": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
